--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,10 @@
-<h1>Hello World</h1>
+<section id="home">
+  <div class="container">
+    <div class="row">
+      <div class="column column-80 bg-text">
+        <h1>Save your time by Outsourcing Tasks. As a Virtual Assistant, I can help your businesses.</h1>
+        <a class="button" href="#">Learn More</a>
+      </div>
+    </div>
+  </div>
+</section>
