--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+#home{
+  background-image: url('/assets/hero-bg.jpg');
+  background-position: center;
+  background-size: cover;
+  background-attachment: scroll;
+  background-repeat: no-repeat;
+  height: 100vh;
+  color: #fff;
+  .bg-content{
+    display: flex;
+    align-items: center;
+    height: 100vh;
+  }
+}
