--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,13 @@
 <section id="home">
-  <div class="container">
-    <div class="row">
-      <div class="column column-80 bg-text">
-        <h1>Save your time by Outsourcing Tasks. As a Virtual Assistant, I can help your businesses.</h1>
-        <a class="button" href="#">Learn More</a>
-      </div>
+    <div class="container">
+        <div class="row">
+            <div class="column column bg-content">
+                <div class="column">
+                    <h1>Save your time by Outsourcing Tasks.
+                    <br> As a Virtual Assistant, I can help your business.</h1>
+                    <a class="button btn-pink" href="#">Learn More</a>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 </section>
