--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
                 <div class="column">
                     <h1>Save your time by Outsourcing Tasks.
                     <br> As a Virtual Assistant, I can help your business.</h1>
-                    <a class="button btn-pink" href="#">Learn More</a>
+                    <a class="button btn-pink text" href="#">Learn More</a>
                 </div>
             </div>
         </div>
