--- a/app/assets/stylesheets/globals/_typography.scss
+++ b/app/assets/stylesheets/globals/_typography.scss
@@ -6,3 +6,22 @@ h1 {
   font-size:48px;
   line-height:52px
  }
+
+ a.text{
+     font-size: 16px;
+     font-weight: normal;
+ }
+ p{
+     font-size: 16px;
+ }
+
+ @media (max-width: 768px){
+    h1 {
+        font-size:48px;
+        line-height:56px
+       }
+    h2 {
+        font-size:36px;
+        line-height:42px
+    }
+ }
