--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Stephanie Castro | VA & Social Media Manager</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+    <head>
+        <title>Stephanie Castro | VA & Social Media Manager</title>
+        <%= csrf_meta_tags %>
+        <%= csp_meta_tag %>
+        <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+        <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    </head>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-
-  <body>
-    <%= yield %>
-  </body>
+    <body>
+        <nav>
+            <div class="logo">
+                <h4>Stephanie Castro</h4>
+            </div>
+            <ul class="nav-links">
+                <li>Home</li>
+                <li>About Me</li>
+                <li>What I Do</li>
+                <li>Portfolio</li>
+                <li>Hire Me</li>
+            </ul>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+        </nav>
+        <%= yield %>
+    </body>
+    <%= javascript_pack_tag 'nav' %>
 </html>
