--- a/app/assets/stylesheets/globals/_typography.scss
+++ b/app/assets/stylesheets/globals/_typography.scss
@@ -1,10 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+
 h1 {
   font-size:72px;
-  line-height:78px
+  line-height:78px;
+  font-family: 'Poppins', sans-serif;
  }
  h2 {
   font-size:48px;
-  line-height:52px
+  line-height:52px;
+  font-family: 'Poppins', sans-serif;
+ }
+ h3,h4,h5{
+    font-family: 'Poppins', sans-serif;
  }
 
  a.text{
