--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
             <div class="column column bg-content">
                 <div class="column">
                     <h1>Save your time by Outsourcing Tasks.
-                    <br> As a Virtual Assistant, I can help your business.</h1>
+                    As a Virtual Assistant, I can help your business.</h1>
                     <a class="button btn-pink text" href="#">Learn More</a>
                 </div>
             </div>
