--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,3 +11,25 @@
         </div>
     </div>
 </section>
+<section id="about-me">
+    <div class="container">
+        <div class="row">
+            <div class="column column-50">
+                <h1 class="black-text">Stephanie Castro</h1>
+                <p>We have created a awesome theme that will help designers, developers and companies create websites for their startups quickly and easily. 
+                Install full website styling with a single click for a better user experience and an easier setup overall, simply add your own content and images. 
+                No coding required, that’s a promise!
+                <br>
+                <br>
+                We have created a awesome theme that will help designers, developers and companies create websites for their startups quickly and easily. 
+                Install full website styling with a single click for a better user experience and an easier setup overall, simply add your own content and images. 
+                No coding required, that’s a promise!
+                </p>
+                <a class="button btn-teal text" href="#">Get In Touch</a>
+            </div>
+            <div class="column column-offset-10 column-40">
+                <%= image_tag("stephanies-pfp.jpg", :alt => "Virtual Assistant Profile Pic") %>
+            </div>
+        </div>
+    </div>
+</section>
