--- a/app/assets/stylesheets/globals/all.scss
+++ b/app/assets/stylesheets/globals/all.scss
@@ -39,3 +39,11 @@ body{
   background-color: $teal;
   border-color: $teal;
 }
+
+.black-text{
+    color: $black;
+}
+
+.white-text{
+    color: $white;
+}
