--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,3 +33,26 @@
         </div>
     </div>
 </section>
+<section id="services">
+    <div class="container">
+        <div class="row">
+            <div class="column">
+                <h1>Services</h1>
+                <div class="row services-details">
+                    <div class="column">
+                        <h5>Social Media</h5>
+                    </div>
+                    <div class="column">
+                        <h5>Copywriting</h5>
+                    </div>
+                    <div class="column">
+                        <h5>Marketing</h5>
+                    </div>
+                    <div class="column">
+                        <h5>Web Design</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
