added new images for services section and added contact me section with new background image. form is wip. also added particles.js for future use

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,6 +10,7 @@
             </div>
         </div>
     </div>
+    <div class="transition-bg-1"></div>
 </section>
 <section id="about-me">
     <div class="container">
@@ -40,19 +41,72 @@
                 <h1>Services</h1>
                 <div class="row services-details">
                     <div class="column">
-                        <h5>Social Media</h5>
+                        <h4>Social Media</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quos maxime ea, quis in accusantium beatae quas repudiandae recusandae aliquam debitis non autem assumenda numquam reiciendis? Nemo reprehenderit reiciendis nihil?</p>
                     </div>
                     <div class="column">
-                        <h5>Copywriting</h5>
+                        <h4>Copywriting</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa tempore iure in perferendis, blanditiis eos. Sed impedit voluptatum voluptatem deserunt? Incidunt ut dignissimos praesentium dolores odit, dolor tempora voluptatem placeat.</p>
                     </div>
                     <div class="column">
-                        <h5>Marketing</h5>
+                        <h4>Marketing</h4>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus nam dolorum voluptas ullam quidem, dignissimos voluptate rerum eaque eum est blanditiis temporibus expedita! Modi quasi sed est consequatur quae tempore!</p>
                     </div>
                     <div class="column">
-                        <h5>Web Design</h5>
+                        <h4>Web Design</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, est doloremque, dolorem nam, voluptate reiciendis magni similique culpa laboriosam magnam facere tempore cupiditate iusto ea id. Facilis quae consectetur asperiores!</p>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</section>
+<section id="my-portfolio">
+    <div class="container">
+        <div class="row">
+            <h1 class="black-text">My Projects</h1>
+        </div>
+        <div class="row projects">
+            <div class="column column-33">
+                <a href="/" class="card">
+                    <h2>Project 1</h2>
+                </a>
+            </div>
+            <div class="column column-33">
+                <a href="/" class="card">
+                    <h2>Project 2</h2>
+                </a>
+            </div>
+            <div class="column column-33">
+                <a href="/" class="card">
+                    <h2>Project 3</h2>
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="contact-me">
+    <div class="transition-bg-2"></div>
+    <div class="container">
+        <div class="row">
+            <form action="">
+                <div class="column column-25">
+                    <label for="">First Name:</label>
+                </div>
+                <div class="column column-25">
+                    <label for="">Last Name:</label>
+                </div>
+                <div class="column column-25">
+                    <label for="">Email:</label>
+                </div>
+                <div class="column column-25">
+                    <label for="">Phone:</label>
+                </div>
+                <div class="column">
+                    <textarea name="comments" id="comments" cols="30" rows="10"></textarea>
+                </div>
+                <button class="button btn-pink">Submit</button>
+            </form>
         </div>
     </div>
 </section>
