--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,4 +29,6 @@
         <%= yield %>
     </body>
     <%= javascript_pack_tag 'nav' %>
+    <%= javascript_pack_tag 'particles-settings' %>
+    <%= javascript_pack_tag 'particles' %>
 </html>
