--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -11,32 +11,87 @@
   background-repeat: no-repeat;
   height: 100vh;
   color: #fff;
+  .transition-bg-1{
+        background-image: url('/assets/bg-transition-1.png');
+        background-position: bottom;
+        background-size: cover;
+        background-attachment: scroll;
+        background-repeat: no-repeat;
+        height: 400px;
+        margin-top: -250px;
+    }
 
   .bg-content {
     display: flex;
     align-items: center;
-    height: 100vh;
+    height: 90vh;
+    h1{
+        font-weight: 200;
+    }
   }
 }
 
 #about-me{
-    padding-top: 3%;
-    padding-bottom: 3%;
-    h1{
-        font-weight: 100;
-    }
+    padding: 6% 0;
 }
 
 #services{
     padding: 6% 0;
-    background-image: url('/assets/marble-bg.jpg');
+    background-image: url('/assets/services-hero-bg.jpg');
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
     height: auto;
-    color: $white;
+    color: $black;
     .services-details{
-        padding-top: 3%;
+        padding-top: 6%;
+        h5,h4{
+            text-transform: uppercase;
+            font-weight: 200;
+        }
+    }
+}
+
+#my-portfolio{
+    padding: 6% 0;
+    .projects{
+        padding-top: 6%;
+        max-width: 100%;
+        flex-wrap: wrap;
+        .card{
+            background: $white;
+            border-radius: 4px;
+            height: 400px;
+            display: block;
+            margin-bottom: 50px;
+            box-shadow: 0 0 10px 0 rgba(0,0,0,.14);
+            @include transition(all, .3s);
+            &:hover{
+                box-shadow: 0 22px 43px rgba(0, 0, 0, 0.24);
+                transform: translateY(-4px);
+                @include transition(all, .3s);
+            }
+        }
+    }
+}
+
+#contact-me{
+    padding: 0 0 6% 0;
+    background-color: #f4f4f4;
+    background-image: url('/assets/contact-hero-bg.jpg');
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    height: 100vh;
+    color: #fff;
+    .transition-bg-2{
+        background-image: url('/assets/bg-transition-2.png');
+        background-position: top;
+        background-size: cover;
+        background-attachment: scroll;
+        background-repeat: no-repeat;
+        height: 400px;
     }
 }
