--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
 </section>
 <section id="about-me">
     <div class="container">
-        <div class="row">
+        <div class="row about-details">
             <div class="column column-50">
                 <h1 class="black-text">Stephanie Castro</h1>
                 <p>We have created a awesome theme that will help designers, developers and companies create websites for their startups quickly and easily. 
@@ -75,11 +75,6 @@
             <div class="column column-33">
                 <a href="/" class="card">
                     <h2>Project 2</h2>
-                </a>
-            </div>
-            <div class="column column-33">
-                <a href="/" class="card">
-                    <h2>Project 3</h2>
                 </a>
             </div>
         </div>
