--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -83,25 +83,34 @@
 <section id="contact-me">
     <div class="transition-bg-2"></div>
     <div class="container">
-        <div class="row">
-            <form action="">
+        <form action="">
+            <h1 class="black-text">Contact Me</h1>
+            <div class="row">
                 <div class="column column-25">
                     <label for="">First Name:</label>
+                    <input class="required" type="text" name="first_name" id="first_name" required="true">
                 </div>
                 <div class="column column-25">
                     <label for="">Last Name:</label>
+                    <input class="required" type="text" name="first_name" id="first_name" required="true">
                 </div>
                 <div class="column column-25">
                     <label for="">Email:</label>
+                    <input class="required" type="text" name="first_name" id="first_name" required="true">
                 </div>
                 <div class="column column-25">
                     <label for="">Phone:</label>
+                    <input class="required" type="text" name="first_name" id="first_name" required="true">
                 </div>
+            </div>
+            <div class="row comments">
                 <div class="column">
+                    <label for="">Comments:</label>
                     <textarea name="comments" id="comments" cols="30" rows="10"></textarea>
                 </div>
-                <button class="button btn-pink">Submit</button>
-            </form>
-        </div>
+            </div>
+            <br>
+            <button class="button btn-teal">Submit</button>
+        </form>
     </div>
 </section>
