--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -6,13 +6,23 @@
   box-sizing: border-box;
 }
 
+.no-scrolling{
+    overflow: hidden;
+}
+
 nav {
   display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: $white;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, .2);
   justify-content: space-around;
   align-items: center;
   min-height: 90px;
   color: $black;
-
+  z-index: 2;
   .nav-links {
     display: flex;
     width: 30%;
@@ -21,6 +31,7 @@ nav {
 
     &.nav-active {
       transform: translateX(0%);
+      box-shadow: 0 45px 31px 13px rgba(0, 0, 0, .2);
     }
 
     li {
@@ -62,7 +73,6 @@ nav {
     flex-direction: column;
     align-items: center;
     z-index: 1;
-    box-shadow: 0 45px 31px 13px rgba(0, 0, 0, .2);
     transform: translateX(100%);
     @include transition(all, .5s);
   }
