--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -83,6 +83,46 @@
 <section id="contact-me">
     <div class="transition-bg-2"></div>
     <div class="container">
+        <%= form_for @contact do |f| %>
+            <h1>Contact Me</h1>
+            <div class="row">
+                <div class="column column-25">
+                    <%= f.label :first_name %>
+                    <%= f.text_field :first_name, required: true %>
+                </div>
+
+                <div class="column column-25">
+                    <%= f.label :last_name %>
+                    <%= f.text_field :last_name, required: true %>
+                </div>
+
+                <div class="column column-25">
+                    <%= f.label :email, class: "cH" %>
+                    <%= f.email_field :email, required: true%>
+                </div>
+
+                <div class="column column-25">
+                    <%= f.label :phone, class: "cH" %>
+                    <%= f.telephone_field :phone, required: true%>
+                </div>
+            </div>
+            <div class="row comments">
+                <div class="column">
+                    <%= f.label :message, class: "cH" %>
+                    <%= f.text_area :message, as: :text, class: "materialize-textarea"%>
+                </div>
+
+                <div class="column column-25 hidden">
+                    <%= f.label :nickname %>
+                    <%= f.text_field :nickname, hint: 'leave this field blank' %>
+                </div>
+            </div>
+            <br>
+            <div class="column">
+                <button class="button btn-teal" type="submit" name="action">Send Message</button>
+            </div>
+      <%end%>
+        <!--
         <form action="">
             <h1 class="black-text">Contact Me</h1>
             <div class="row">
@@ -112,5 +152,6 @@
             <br>
             <button class="button btn-teal">Submit</button>
         </form>
+        -->
     </div>
 </section>
