contact form works locally and stlyed nav-links with real links

--- a/app/assets/stylesheets/globals/_typography.scss
+++ b/app/assets/stylesheets/globals/_typography.scss
@@ -1,39 +1,56 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200&family=Raleway&display=swap');
+body {
+    font-family: 'Raleway', sans-serif !important;
+    font-size: 16px;
+}
 
 h1 {
-  font-size:72px;
-  line-height:78px;
-  font-family: 'Poppins', sans-serif;
-  font-weight: 100;
- }
- h2 {
-  font-size:48px;
-  line-height:52px;
-  font-family: 'Poppins', sans-serif;
-  font-weight: 200;
- }
- h3,h4,h5{
+    font-size: 72px;
+    line-height: 78px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 100;
+}
+
+h2 {
+    font-size: 48px;
+    line-height: 52px;
     font-family: 'Poppins', sans-serif;
     font-weight: 200;
- }
+}
 
- a.text{
-     font-size: 16px;
-     font-weight: normal;
- }
- p{
-     font-size: 16px;
-     color: #000;
-     font-family: 'Raleway', sans-serif;
- }
+h3,
+h4,
+h5 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 200;
+}
 
- @media (max-width: 768px){
-    h1 {
-        font-size:48px;
-        line-height:56px
-       }
-    h2 {
-        font-size:36px;
-        line-height:42px
+a.text {
+    font-size: 16px;
+    font-weight: normal;
+}
+
+p {
+    font-size: 16px;
+    color: #000;
+    font-family: 'Raleway', sans-serif;
+}
+
+form {
+    font-family: 'Raleway', sans-serif !important;
+    textarea,
+    input {
+        font-family: 'Raleway', sans-serif !important;
     }
- }
+}
+
+@media (max-width: 768px) {
+    h1 {
+        font-size: 48px;
+        line-height: 56px
+    }
+    h2 {
+        font-size: 36px;
+        line-height: 42px
+    }
+}
