--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -38,7 +38,7 @@
     <div class="container">
         <div class="row">
             <div class="column">
-                <h1>Services</h1>
+                <h1>What I Do</h1>
                 <div class="row services-details">
                     <div class="column">
                         <h4>Social Media</h4>
@@ -85,7 +85,7 @@
     <div class="container">
         <%= form_for @contact do |f| %>
             <h1>Contact Me</h1>
-            <div class="row">
+            <div class="row contact-form">
                 <div class="column column-25">
                     <%= f.label :first_name %>
                     <%= f.text_field :first_name, required: true %>
