--- a/app/assets/stylesheets/globals/all.scss
+++ b/app/assets/stylesheets/globals/all.scss
@@ -64,6 +64,7 @@ form {
     input[type="url"],
     textarea,
     select {
+        font-size: 16px;
         border-radius: 0px;
         border-top: none;
         border-left: none;
