--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -1,85 +1,101 @@
 @import "globals/all";
-
 * {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
 
-.no-scrolling{
+.no-scrolling {
     overflow: hidden;
 }
 
-nav {
-  display: flex;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  background-color: $white;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, .2);
-  justify-content: space-around;
-  align-items: center;
-  min-height: 90px;
-  color: $black;
-  z-index: 2;
-  .nav-links {
-    display: flex;
-    width: 30%;
-    justify-content: space-around;
-    margin-bottom: 0px;
-
-    &.nav-active {
-      transform: translateX(0%);
-      box-shadow: 0 45px 31px 13px rgba(0, 0, 0, .2);
+div#notice-wrapper {
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    z-index: 1050;
+    background: $teal;
+    p {
+        padding: 3.195rem 0.2rem;
+        ;
+        text-align: center;
+        margin: 0;
+        font-size: 1rem;
+        font-weight: bold;
+        color: $white;
+        letter-spacing: 2px;
     }
-
-    li {
-      list-style: none;
-    }
-  }
-
-  .burger {
-    display: none;
-
-    div {
-      width: 25px;
-      height: 3px;
-      background-color: $black;
-      margin: 5px;
-    }
-  }
 }
 
+nav {
+    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: $white;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, .2);
+    justify-content: space-around;
+    align-items: center;
+    min-height: 90px;
+    color: $black;
+    z-index: 2;
+    .nav-links {
+        display: flex;
+        width: 30%;
+        justify-content: space-around;
+        margin-bottom: 0px;
+        &.nav-active {
+            transform: translateX(0%);
+            box-shadow: 0 45px 31px 13px rgba(0, 0, 0, .2);
+        }
+        li {
+            list-style: none;
+            margin-bottom: 0px;
+            a {
+                color: $black;
+                &.hire-me {
+                    border-bottom: 2px solid $teal;
+                }
+            }
+        }
+    }
+    .burger {
+        display: none;
+        div {
+            width: 25px;
+            height: 3px;
+            background-color: $black;
+            margin: 5px;
+        }
+    }
+}
 
 @media (max-width: 1356px) {
-  ul.nav-links {
-    width: 50%;
-  }
+    ul.nav-links {
+        width: 50%;
+    }
 }
 
 @media (max-width: 768px) {
-  body {
-    overflow-x: hidden;
-  }
-
-  ul.nav-links {
-    position: absolute;
-    right: 0px;
-    height: 100vh;
-    top: 90px;
-    background-color: $white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    z-index: 1;
-    transform: translateX(100%);
-    @include transition(all, .5s);
-  }
-
-  nav .burger {
-    display: block;
-    cursor: pointer;
-  }
-
+    body {
+        overflow-x: hidden;
+    }
+    ul.nav-links {
+        position: absolute;
+        right: 0px;
+        height: 100vh;
+        top: 90px;
+        background-color: $white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        z-index: 1;
+        transform: translateX(100%);
+        @include transition(all, .5s);
+    }
+    nav .burger {
+        display: block;
+        cursor: pointer;
+    }
 }
