--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,16 +9,25 @@
     </head>
 
     <body>
+        <% if notice %>
+            <div id="notice-wrapper">
+                <p class="notice"><%= notice %></p>
+            </div>
+        <%elsif alert%>
+            <div id="notice-wrapper">
+                <p class="alert"><%= alert %></p>
+            </div>
+        <%end%>
         <nav>
             <div class="logo">
                 <h4>Stephanie Castro</h4>
             </div>
             <ul class="nav-links">
-                <li>Home</li>
-                <li>About Me</li>
-                <li>What I Do</li>
-                <li>Portfolio</li>
-                <li>Hire Me</li>
+                <li><a href="<%= root_path %>">Home</a></li>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#services">What I Do</a></li>
+                <li><a href="#my-portfolio">Portfolio</a></li>
+                <li><a href="#contact-me" class="hire-me">Hire Me</a></li>
             </ul>
             <div class="burger">
                 <div class="line1"></div>
@@ -29,6 +38,4 @@
         <%= yield %>
     </body>
     <%= javascript_pack_tag 'nav' %>
-    <%= javascript_pack_tag 'particles-settings' %>
-    <%= javascript_pack_tag 'particles' %>
 </html>
