new images for portfolio

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -77,6 +77,11 @@
                     @include transition(all,
                     .3s);
                 }
+                h4 {
+                    text-align: center;
+                    padding: 10px;
+                    color: $black;
+                }
             }
         }
     }
