--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -68,13 +68,15 @@
         </div>
         <div class="row projects">
             <div class="column column-33">
-                <a href="/" class="card">
-                    <h2>Project 1</h2>
+                <a href="https://www.clearchoicetn.com" target="_blank" class="card">
+                    <img src="assets/clear-choice.jpg" alt="Clear Choice Copy">
+                    <h4>Clear Choice</h4>
                 </a>
             </div>
             <div class="column column-33">
-                <a href="/" class="card">
-                    <h2>Project 2</h2>
+                <a href="http://www.salongingers.com" target="_blank" class="card">
+                    <img src="assets/gingers-salon.jpg" alt="Clear Choice Copy">
+                    <h4>Ginger Hair Salon</h4>
                 </a>
             </div>
         </div>
