--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,9 @@
         <title>Stephanie Castro | VA & Social Media Manager</title>
         <%= csrf_meta_tags %>
         <%= csp_meta_tag %>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Hi! I am a Virtual Assistant." />
         <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
         <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     </head>
