updated copy on website

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,9 +3,8 @@
         <div class="row">
             <div class="column column bg-content">
                 <div class="column">
-                    <h1>Save your time by Outsourcing Tasks.
-                    As a Virtual Assistant, I can help your business.</h1>
-                    <a class="button btn-pink text" href="#">Learn More</a>
+                    <h1>Save time by outsourcing tasks. As a virtual assistant, I can help your business thrive.</h1>
+                    <a class="button btn-pink text" href="#services">Learn More</a>
                 </div>
             </div>
         </div>
@@ -17,16 +16,17 @@
         <div class="row about-details">
             <div class="column column-50">
                 <h1 class="black-text">Stephanie Castro</h1>
-                <p>We have created a awesome theme that will help designers, developers and companies create websites for their startups quickly and easily. 
-                Install full website styling with a single click for a better user experience and an easier setup overall, simply add your own content and images. 
-                No coding required, that’s a promise!
+                <p>Hi friend,
+                <br>
+                Are you a small business owner struggling to balance work-life?
+                Or perhaps you’ve embarked on your entrepreneurial journey but find yourself spending too much time on mundane tasks?
+                You are in the right place!
+                Hand me that “to-do list”. I got you!
                 <br>
                 <br>
-                We have created a awesome theme that will help designers, developers and companies create websites for their startups quickly and easily. 
-                Install full website styling with a single click for a better user experience and an easier setup overall, simply add your own content and images. 
-                No coding required, that’s a promise!
+                As a virtual assistant, my goal is to help businesses thrive and flourish. By taking the load off your shoulders, you now have the freedom to do what you truly love!
                 </p>
-                <a class="button btn-teal text" href="#">Get In Touch</a>
+                <a class="button btn-teal text" href="#contact-me">Get In Touch</a>
             </div>
             <div class="column column-offset-10 column-40">
                 <%= image_tag("stephanies-pfp.jpg", :alt => "Virtual Assistant Profile Pic") %>
@@ -41,21 +41,36 @@
                 <h1>What I Do</h1>
                 <div class="row services-details">
                     <div class="column">
+                        <h4>Virtual Assistant Admin</h4>
+                        <ul>
+                            <li>Email Management</li>
+                            <li>Calendar Management</li>
+                            <li>Customer Service</li>
+                            <li>Appointment Setting</li>
+                            <li>Translation (English/Spanish)</li>
+                        </ul>
+                    </div>
+                    <div class="column">
                         <h4>Social Media</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quos maxime ea, quis in accusantium beatae quas repudiandae recusandae aliquam debitis non autem assumenda numquam reiciendis? Nemo reprehenderit reiciendis nihil?</p>
+                        <ul>
+                            <li>Market Research</li>
+                            <li>Hashtag Research</li>
+                            <li>Social Media Strategy</li>
+                            <li>Create Content (copy + digital)</li>
+                            <li>Community Engagement *(Monthly Retainer & A la carte)</li>
+                        </ul>
                     </div>
                     <div class="column">
                         <h4>Copywriting</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa tempore iure in perferendis, blanditiis eos. Sed impedit voluptatum voluptatem deserunt? Incidunt ut dignissimos praesentium dolores odit, dolor tempora voluptatem placeat.</p>
+                        <ul>
+                            <li>Create Website/Blog Content</li>
+                            <li>Proofread</li>
+                            <li>Edit</li>
+                        </ul>
                     </div>
-                    <div class="column">
-                        <h4>Marketing</h4>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus nam dolorum voluptas ullam quidem, dignissimos voluptate rerum eaque eum est blanditiis temporibus expedita! Modi quasi sed est consequatur quae tempore!</p>
-                    </div>
-                    <div class="column">
-                        <h4>Web Design</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, est doloremque, dolorem nam, voluptate reiciendis magni similique culpa laboriosam magnam facere tempore cupiditate iusto ea id. Facilis quae consectetur asperiores!</p>
-                    </div>
+                </div>
+                <div class="row">
+                    <a class="button btn-pink text" href="https://docs.google.com/document/d/15PdASjsgmmgPWF4aexAKW9KTHfy2Pg9Y5UKSy9bDbyk/edit?usp=sharing">Get In Touch</a>
                 </div>
             </div>
         </div>
