--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <a class="button btn-pink text" href="https://docs.google.com/document/d/15PdASjsgmmgPWF4aexAKW9KTHfy2Pg9Y5UKSy9bDbyk/edit?usp=sharing">Get In Touch</a>
+                    <a class="button btn-pink text" target="_blank" href="https://docs.google.com/document/d/15PdASjsgmmgPWF4aexAKW9KTHfy2Pg9Y5UKSy9bDbyk/edit?usp=sharing">View Prices</a>
                 </div>
             </div>
         </div>
