--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -138,7 +138,8 @@
             <div class="column">
                 <button class="button btn-teal" type="submit" name="action">Send Message</button>
             </div>
-      <%end%>
+        <%end%>
+        <h4>Contact Form is currently disabled but feel free to email at: <a href="mailto:espinozasteph526@gmail.com">espinozasteph526@gmail.com</a></h4>
         <!--
         <form action="">
             <h1 class="black-text">Contact Me</h1>
