disabled button till further notice

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -136,7 +136,7 @@
             </div>
             <br>
             <div class="column">
-                <button class="button btn-teal" type="submit" name="action">Send Message</button>
+                <button class="button btn-teal" type="submit" name="action" disabled>Send Message</button>
             </div>
         <%end%>
         <h4>Contact Form is currently disabled but feel free to email at: <a href="mailto:espinozasteph526@gmail.com">espinozasteph526@gmail.com</a></h4>
